--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,10 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="10" />
+		
+		<permission android:protectionLevel="signature" 
+		    android:name="com.example.contentprovider.Provider.permission" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="MyContentProvider"
+            android:authorities="com.example.contentprovider.Provider"
+            android:permission="com.example.contentprovider.Provider.permission" />
     </application>
 
 </manifest>
